--- a/src/styles/components/_icons.scss
+++ b/src/styles/components/_icons.scss
@@ -43,10 +43,13 @@
 
 				svg {
 					height: #{$size}rem;
+					fill: black;
 				}
 
 				&:hover {
-					fill: nth($colors, $i);
+					svg {
+						fill: nth($colors, $i);
+					}
 				}
 			}
 
