--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,3 +6,32 @@
 @import "./animations/bounce";
 @import "./components/icons";
 @import "./components/icons-container";
+
+.github {
+	padding: 4rem;
+	transition: all .5s;
+
+	&:visited, &:link {
+		color: black;
+		font-size: 3rem;
+		text-decoration: none;
+	}
+
+	svg {
+		height: 8rem;
+		fill: black;
+		transition: all .5s;
+	}
+
+	&:hover {
+		background-color: black;
+		color: white;
+		svg {
+			fill: white;
+		}
+	}
+
+	span {
+		margin-right: 2rem;
+	}
+}
