--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,3 +1,8 @@
 @charset "utf-8";
 
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=latin-ext");
+
+body {
+	font-size: 1.6rem;
+	font-family: "Roboto Condensed", sans-serif;
+}
