--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,7 @@
 @import "./base/rebase";
 @import "./base/typography";
 @import "./animations/bounce";
+@import "./components/description";
 @import "./components/github";
 @import "./components/icons";
 @import "./components/icons-container";
