--- a/src/styles/components/_description.scss
+++ b/src/styles/components/_description.scss
@@ -4,7 +4,7 @@
 	text-align: center;
 	font-size: 1.8rem;
 	line-height: 2.4rem;
-	margin-bottom: 2rem;
+	margin: 2rem 0;
 	padding: 2rem;
 	color: #155724;
 	background-color: #d4edda;
